--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,5 +8,12 @@
 }
 
 body {
-    font-family: 'Times New Roman', Times, serif
+    font-family: 'Roboto', sans-serif;
+}
+
+#logo {
+    float: left;
+    font-size: 200%;
+    margin-top: 30px;
+    margin-left: 15px;
 }
