--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,33 +20,74 @@ body {
     margin-top: 30px;
     margin-left: 15px;
     text-transform: uppercase;
+    color: #c25811;
 }
 
 /* Header class rules */
 .header-nav {
     background-color: green;
+    width: 100%;
+    height: 100px;
 }
 
 /* Welcome banner class rules */
 .welcome-banner {
     background-color: blue;
+    width: 100%;
+    height: 250px;
 
 }
 
 /* Main body class rules */
 .main-body {
-    background-color: yellow;
+    height: 500px;
+    margin-left: 1%;
+    margin-right: 1%;
+}
 
+#menu {
+    width: 49%;
+    height: 500px;
+    float: left;
+    background-color: blueviolet;
+    margin-right: 10px;
+}
+
+#book-table {
+    width: 49%;
+    height: 500px;
+    float: right;
+    background-color: yellow;
 }
 
 /* Contacts and email class rules */
 .contacts-and-email {
+    height: 250px;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+#email-form {
+    width: 49%;
+    height: 250px;
+    float: left;
     background-color: red;
+    margin-right: 10px;
+
+}
+
+#contacts {
+    width: 49%;
+    height: 250px;
+    float: right;
+    background-color: pink;
 
 }
 
 /* Footer rules*/
 #footer {
     background-color: orange;
+    width: 100%;
+    height: 100px;
 
 }
