--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     margin-top: 30px;
     margin-left: 80px;
     text-transform: uppercase;
-    color: #c25811;
+    color: #735343;
 }
 
 #logo, .navbar {
@@ -30,7 +30,7 @@ body {
 
 /* header class rules */
 .header-nav {
-    background-color: green;
+    background-color: #e1b995;
     width: 100%;
     height: 100px;
 }
@@ -38,30 +38,46 @@ body {
 /* navbar rules */
 .navbar, li {
     float: left;
+    font-size: 20px;
     list-style-type: none;
     margin-left: 40px;
 }
 
 .navbar, a {
     text-decoration: none;
-    color: black;
+    color: #3c302f;
 }
 
 .navber, a:hover {
-    border-bottom: 3px solid darkgreen;
+    border-bottom: 3px solid #3c302f;
 }
 
 /* welcome banner class rules */
 .welcome-banner {
     width: 100%;
-    height: 425px;
+    height: 400px;
+    overflow: hidden;
 
 }
 
 #welcome-pic {
-    background-image:url("../images/coffeemug.jpg");
+    background: url("../images/coffeemug.jpg");
     width: 100%;
-    height: 425px;
+    height: 400px;
+    
+    /* animates zoom for welcome-pic */
+    animation-name: pic-zoom;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+}
+
+/* zoom for welcome-pic */
+@keyframes pic-zoom {
+    from{
+        transform: scale(1);
+    }to{
+        transform: scale(1.05);
+    }
 }
 
 /* Main body class rules */
