--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ body {
 /* welcome banner class rules */
 .welcome-banner {
     width: 100%;
-    height: 400px;
+    height: 600px;
     overflow: hidden;
 
     position: relative;
@@ -87,9 +87,9 @@ body {
 
 /* welcome-pic specific rules */
 #welcome-pic {
-    background: url("../images/coffeemug.jpg");
+    background: url("../images/coffebeans.jpg");
     width: 100%;
-    height: 400px;
+    height: 600px;
     
     /* animates zoom for welcome-pic */
     animation-name: pic-zoom;
@@ -106,21 +106,28 @@ body {
     }
 }
 
-
-
-/* Main body class rules */
+/* main body class rules */
 .main-body {
     height: 500px;
     margin-left: 1%;
     margin-right: 1%;
 }
 
+/* drinks and desserts menu */
 #menu {
     width: 49%;
     height: 500px;
     float: left;
     background-color: blueviolet;
     margin-right: 10px;
+}
+
+#drinks {
+
+}
+
+#desserts {
+    
 }
 
 #book-table {
