--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,9 @@ body {
 /* main body class rules */
 .main-body {
     height: 500px;
+    background-color: #74604e;
+    border-radius: 25px;
+    margin-top: 50px;
     margin-left: 1%;
     margin-right: 1%;
 }
@@ -118,7 +121,6 @@ body {
     width: 49%;
     height: 600px;
     float: left;
-    background-color: blueviolet;
     margin-right: 10px;
 }
 
@@ -129,14 +131,12 @@ body {
     padding-bottom: 30px;
     width: 40%;
     float: left;
-    background-color: aqua;
 } /* create general structure and placement for drinks, so it doesn't clash
 with the other parts' space */
 
 #coffeemug-icon {
     width: 8%;
     margin: 0 auto;
-    background-color: bisque;
 }
 
 #desserts {
@@ -146,7 +146,6 @@ with the other parts' space */
     padding-bottom: 30px;
     width: 40%;
     float: right;
-    background-color: rgb(102, 102, 73);
 } /* create general structure and placement for desserts, so it doesn't clash
 with the other parts' space */
 
@@ -163,12 +162,31 @@ with the other parts' space */
     clear: both;
 }
 
+#drinks hr {
+    border-top: solid 2px;
+    color: #281f1e;
+    width: 100%;
+}
+
 #desserts h2 {
     color: #281f1e;
     padding-left: 90px;
     padding-bottom: 30px;
     line-height: 20px;
     clear: both;
+}
+
+#desserts hr {
+    border-top: solid 2px;
+    color: #281f1e;
+    width: 100%;
+}
+
+/* coffee-mug icon */
+#coffeemug-icon {
+    font-size: 300%;
+    color: #281f1e;
+    padding-top: 30px;
 }
 
 #book-table {
