--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,3 +256,9 @@ with the other parts' space */
     padding-bottom: 20px;
     color: #9b8068;
 }
+
+#footer a i {
+    color: #9b8068;
+    font-size: 200%;
+    letter-spacing: 50px;
+}
